# meals

./: .gitignore  .gitmodules  .igniterc  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  Procfile  README.md  Rocket.toml
doc/: API.md  Despliegue.md  Docker.md  HerramientaConstrucción.md  Herramientas.md  Pruebas.md
migrations/2019-10-07-114233_create_initial_tables/: down.sql  up.sql
migrations/2019-10-19-172833_add_test_data/: up.sql
migrations_test/2019-10-19-172833_add_test_data/: up.sql
src/: api_structs.rs  api_test.rs  lib.rs  main.rs  models.rs  schema.rs
